# vspect

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: api-reference.md
src/vspect/: __init__.py  __main__.py
tests/: test_cli.py  test_lib.py
tests/assets/: pyproject.toml
